Bakoverkompatibilitet for Arena og stabilisering